--- a/client/templates/chat.html
+++ b/client/templates/chat.html
@@ -1,11 +1,8 @@
-<ion-view view-title="读书分享">
+<ion-view view-title="谈笑有鸿儒">
   <ion-nav-buttons side="right">
     <button class="button button-clear"><img class="header-picture" ng-src="{{  }}"></button>
   </ion-nav-buttons>
   <ion-content class="chat" delegate-handle="chatScroll" overflow-scroll="true">
-    <div class="load-more">
-      <a href="#" ng-click="chat.loadMore()">load more</a>
-    </div>
     <div class="message-list">
       <div ng-repeat="message in messages" ng-init="text=getText(message); author=getAuthor(text);" class="message-wrapper">
         <div ng-if="message.text || text">
