--- a/client/templates/register.html
+++ b/client/templates/register.html
@@ -17,10 +17,10 @@
               <input type="text" placeholder="喜欢聊什么呀？（比如文学，电影，旅行，职场，心理）" ng-model="register.topic">
           </label>
           <label class="item item-input">
-              <input type="text" placeholder="聊天的目的是？（比如找对象，交朋友，充实自我，学习，排遣无聊）" ng-model="register.topic">
+              <input type="text" placeholder="聊天的目的是？（比如找对象，交朋友，充实自我，学习，排遣无聊）" ng-model="register.goal">
           </label>
           <label class="item item-input">
-              <input type="text" placeholder="介绍一下你自己？（职业，专业，出生地，现在地，一件关于自己的趣事）" ng-model="register.topic">
+              <input type="text" placeholder="介绍一下你自己？（职业，专业，出生地，现在地，一件关于自己的趣事）" ng-model="register.intro">
           </label>
       </div>
       <button class="button button-block button-calm" ng-click="register.register()">注册</button>
