--- a/client/styles/chat.scss
+++ b/client/styles/chat.scss
@@ -21,14 +21,19 @@
   padding-bottom: 60px;
 }
 
-.message-profile {
+.chat-title {
+  float: left;
+}
+
+.chat-profile {
   width: 38px;
   height: 38px;
   border-radius: 50%;
   color:#fff;
   text-align:center;
   line-height:38px;
-  background:#808080
+  background:#808080;
+  float:left;
 }
 
 .message-wrapper {
