--- a/client/templates/chat.html
+++ b/client/templates/chat.html
@@ -3,8 +3,7 @@
     <ion-list>
       <ion-item
               ng-repeat="chat in chats"
-              class="item-chat item-remove-animate item-avatar item-icon-right"
-              type="item-text-wrap"
+              class="item-icon-right"
               href="{{chat.href}}">
         <div class="chat-profile">
           <div ng-if="chat.title">
