--- a/client/styles/chat.scss
+++ b/client/styles/chat.scss
@@ -14,6 +14,10 @@
   color:#fff;
   text-align:center;
   line-height:38px;
-  background:#808080;
+  background: #808080;
   float:left;
 }
+
+.chat-profile.title-online {
+  background: #4cb2b4;
+}  
