put back morning change on rating and add profile draft

--- a/client/styles/chat.scss
+++ b/client/styles/chat.scss
@@ -20,4 +20,12 @@
 
 .chat-profile.title-online {
   background: #4cb2b4;
-}  
+} 
+
+.last-message-timestamp {
+  position: absolute;
+  top: 16px;
+  right: 40px;
+  font-size: 14px;
+  color: #9A9898;
+} 
