--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view cache-view = "false">
   <ion-nav-title>
     <span ng-if="$root.currentUser._id != currentRoom.creater">
       {{currentRoom.title}}
