add rating widget

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -12,8 +12,8 @@
       <div class="list card">
         <div class="item item-divider">我对{{profile.username}}的评价</div>
         <div class="item item-body">
-          <rating ng-model="rating.rate" max="rating.max"></rating>
-          <input type="text" placeholder="我对{{profile.username}}的评价" ng-model="review.detail">
+          <rating ng-model="rating.rate" max="rating.max" class="rating"></rating>
+          <input type="text" placeholder="在写几句我对{{profile.username}}的评价吧！" ng-model="review.detail">
         </div>
       </div>
     </span>  
