--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -4,7 +4,12 @@
        对话列表 
     </a>
   </ion-nav-buttons>
-  <ion-nav-title> {{profile.username}} </ion-nav-title>
+  <ion-nav-title> 
+    {{profile.username}} 
+    <span ng-if="$root.currentUser._id != profile._id">
+      <a class="icon ion-chatboxes" href={{profile.chatHref}}></a>
+    </span>
+  </ion-nav-title>
   <ion-content class="profile">
     <span ng-if="$root.currentUser._id == profile._id">
       <div class="padding text-center">
@@ -17,8 +22,13 @@
       <div class="list card">
         <div class="item item-divider">我对{{profile.username}}的评价（点击修改，欢迎完善）</div>
         <div class="item item-body">
-          <rating ng-model="rating.rate" max="rating.max" class="rating"></rating>
-          <input type="text" placeholder="再写几句我对{{profile.username}}的评价吧！" class="review" ng-model="review.detail">
+          <rating ng-model="rating.rate" max=5 class="rating"></rating>
+          <input type="text" placeholder="再写几句我对{{profile.username}}的评价吧！" class="review" ng-model="rating.detail"
+          on-return="changeRating()"
+          on-blur="changeRating()" /> 
+          <span ng-if="needSaveRating">
+            <button ng-click="changeRating()" class="button button-clear button-positive">保存</button>
+          </span>
         </div>
       </div>
     </span>  
