--- a/client/styles/profile.scss
+++ b/client/styles/profile.scss
@@ -21,3 +21,11 @@ textarea.review {
 .float-clear {
   clear: both;
 }
+
+.item.selectable {
+   -moz-user-select: text;
+   -khtml-user-select: text;
+   -webkit-user-select: text;
+   -ms-user-select: text;
+   user-select: text;
+}
