fix rating and logout bug, actively looking for more bugs

--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -13,7 +13,7 @@
   <ion-content class="selectable" overflow-scroll="true">
     <span ng-if="$root.currentUser._id == profile._id">
       <div class="padding text-center">
-        <button ng-click="profile.logout()" class="button button-clear button-assertive">登出</button>
+        <button ng-click="logout()" class="button button-clear button-assertive">登出</button>
       </div>
     </span>  
 
