bold new message

--- a/client/styles/chat.scss
+++ b/client/styles/chat.scss
@@ -18,6 +18,14 @@
   float:left;
 }
 
+.hasNewMessage {
+  font-weight: bold;
+}
+
+.hasNewMessage h2 {
+  font-weight: bold;
+}
+
 .chat-profile.title-online {
   background: #4cb2b4;
 } 
