--- a/client/templates/chat.html
+++ b/client/templates/chat.html
@@ -2,7 +2,7 @@
   <ion-content>
     <ion-list>
       <ion-item
-              ng-repeat="chat in chats"
+              ng-repeat="chat in chat.chatsInHelper"
               class="item-icon-right"
               href="{{chat.href}}">
         <div class="chat-profile {{chat.titleClass}}">
